--- a/frontmarket/package.json
+++ b/frontmarket/package.json
@@ -15,6 +15,7 @@
     "bootstrap": "^5.3.8",
     "dom": "^0.0.3",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.344.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
