--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.application.name=MarketingManager
+spring.application.name=SistemaBolt
 
 # Configuração do Banco de Dados
-spring.datasource.url=jdbc:postgresql://localhost/marketing_db
+spring.datasource.url=jdbc:postgresql://localhost/bolt_db
 spring.datasource.username=postgres
 spring.datasource.password=Sen@c2023
 spring.datasource.driver-class-name=org.postgresql.Driver
